# Class-Files

./: README.md
26.03.11_airStreamlit/: db.py  main.py  pyproject.toml
26.03.11_airStreamlit/pages/: 01_출발지연횟수.py  02_도착지연횟수.py  03_인기항공노선.py  04_항공대시보드.py  05_장거리노선 종합 분석(수정).py  05_장거리노선 종합 분석.py  06_장거리노선 TOP10 분석.py  06_항공 지연분석 대시보드.py
26.03.11_airStreamlit/sql/: air_60m_delay.sql  air_delay&best.sql  air_long.sql
26.03.13_homework/: package-lock.json  vite.config.js
26.03.13_homework/src/: main.jsx
26.03.13_homework/src/pages/: App.jsx
26.03.13_homework/src/styles/: App.css  App2.css  App3.css  index.css  index2.css  index3.css
26.03.13_homework/src/utils/: network.js
