[project]
name = "air260311"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "mariadb>=1.1.14",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pydantic-settings>=2.13.1",
    "pydeck>=0.9.1",
    "streamlit>=1.54.0",
    "streamlit-aggrid>=1.2.1.post2",
    "trafilatura>=2.0.0",
    "vega-datasets>=0.9.0",
]
